Fix the alignment of the image and the body text

--- a/css/main.css
+++ b/css/main.css
@@ -38,10 +38,10 @@ p {
   margin: 0;
 }
 
-img {
+.img-flex {
   width: 100%;
   margin-top: 1rem;
-  display: inline-block;
+  display: block;
 }
 
 a {
